--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,16 @@
                     <li class="projects-list-item">
                         <a class="projects-list-link link" href="index.html">
                             <div>
-                                <img src="images/project-1.jpg" alt="проєкт 1" width="370" height="294" />
+                                <div class="image-thumb">
+                                    <img class="project-img" src="images/project-1.jpg" alt="проєкт 1" width="370"
+                                        height="294" />
+                                    <div class="project-text">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем
+                                            функціоналу та сервісів. Все це
+                                            дозволить відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                                 <div class="project-item-wrapper">
                                     <h3 class="project-title">Технокряк</h3>
                                     <p class="project-dscr">Веб-сайт</p>
@@ -87,7 +96,15 @@
                     <li class="projects-list-item">
                         <a class="projects-list-link link" href="index.html">
                             <div>
-                                <img src="images/project-2.jpg" alt="Проєкт 2" width="370" height="294" />
+                                <div class="image-thumb">
+                                    <img src="images/project-2.jpg" alt="Проєкт 2" width="370" height="294" />
+                                    <div class="project-text">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем
+                                            функціоналу та сервісів. Все це
+                                            дозволить відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                                 <div class="project-item-wrapper">
                                     <h3 class="project-title">Постер New Orlean vs Golden Star</h3>
                                     <p class="project-dscr">Дизайн</p>
@@ -98,7 +115,15 @@
                     <li class="projects-list-item">
                         <a class="projects-list-link link" href="index.html">
                             <div>
-                                <img src="images/project-3.jpg" alt="Проєкт 3" width="370" height="294" />
+                                <div class="image-thumb">
+                                    <img src="images/project-3.jpg" alt="Проєкт 3" width="370" height="294" />
+                                    <div class="project-text">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем
+                                            функціоналу та сервісів. Все це
+                                            дозволить відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                                 <div class="project-item-wrapper">
                                     <h3 class="project-title">Ресторан Seafood</h3>
                                     <p class="project-dscr">Додаток</p>
@@ -109,7 +134,15 @@
                     <li class="projects-list-item">
                         <a class="projects-list-link link" href="index.html">
                             <div>
-                                <img src="images/project-4.jpg" alt="Проєкт 4" width="370" height="294" />
+                                <div class="image-thumb">
+                                    <img src="images/project-4.jpg" alt="Проєкт 4" width="370" height="294" />
+                                    <div class="project-text">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем
+                                            функціоналу та сервісів. Все це
+                                            дозволить відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                                 <div class="project-item-wrapper">
                                     <h3 class="project-title">Проєкт Prime</h3>
                                     <p class="project-dscr">Маркетинг</p>
@@ -120,7 +153,15 @@
                     <li class="projects-list-item">
                         <a class="projects-list-link link" href="index.html">
                             <div>
-                                <img src="images/project-5.jpg" alt="Проєкт 5" width="370" height="294" />
+                                <div class="image-thumb">
+                                    <img src="images/project-5.jpg" alt="Проєкт 5" width="370" height="294" />
+                                    <div class="project-text">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем
+                                            функціоналу та сервісів. Все це
+                                            дозволить відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                                 <div class="project-item-wrapper">
                                     <h3 class="project-title">Проєкт Boxes</h3>
                                     <p class="project-dscr">Додаток</p>
@@ -131,7 +172,15 @@
                     <li class="projects-list-item">
                         <a class="projects-list-link link" href="index.html">
                             <div>
-                                <img src="images/project-6.jpg" alt="Проєкт 6" width="370" height="294" />
+                                <div class="image-thumb">
+                                    <img src="images/project-6.jpg" alt="Проєкт 6" width="370" height="294" />
+                                    <div class="project-text">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем
+                                            функціоналу та сервісів. Все це
+                                            дозволить відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                                 <div class="project-item-wrapper">
                                     <h3 class="project-title">Inspiration has no Borders</h3>
                                     <p class="project-dscr">Веб-сайт</p>
@@ -142,7 +191,15 @@
                     <li class="projects-list-item">
                         <a class="projects-list-link link" href="index.html">
                             <div>
-                                <img src="images/project-7.jpg" alt="Проєкт 7" width="370" height="294" />
+                                <div class="image-thumb">
+                                    <img src="images/project-7.jpg" alt="Проєкт 7" width="370" height="294" />
+                                    <div class="project-text">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем
+                                            функціоналу та сервісів. Все це
+                                            дозволить відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                                 <div class="project-item-wrapper">
                                     <h3 class="project-title">Видання Limited Edition</h3>
                                     <p class="project-dscr">Дизайн</p>
@@ -153,7 +210,15 @@
                     <li class="projects-list-item">
                         <a class="projects-list-link link" href="index.html">
                             <div>
-                                <img src="images/project-8.jpg" alt="Проєкт 8" width="370" height="294" />
+                                <div class="image-thumb">
+                                    <img src="images/project-8.jpg" alt="Проєкт 8" width="370" height="294" />
+                                    <div class="project-text">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем
+                                            функціоналу та сервісів. Все це
+                                            дозволить відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                                 <div class="project-item-wrapper">
                                     <h3 class="project-title">Проєкт LAB</h3>
                                     <p class="project-dscr">Маркетинг</p>
@@ -164,7 +229,15 @@
                     <li class="projects-list-item">
                         <a class="projects-list-link link" href="index.html">
                             <div>
-                                <img src="images/project-9.jpg" alt="Проєкт 9" width="370" height="294" />
+                                <div class="image-thumb">
+                                    <img src="images/project-9.jpg" alt="Проєкт 9" width="370" height="294" />
+                                    <div class="project-text">
+                                        <p>Ресурс пропонує комплексні пропозиції з різним рівнем
+                                            функціоналу та сервісів. Все це
+                                            дозволить відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                                 <div class="project-item-wrapper">
                                     <h3 class="project-title">Growing Business</h3>
                                     <p class="project-dscr">Додаток</p>
