--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <section class="hero">
       <div class="hero-container container">
         <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="modal-btn">Замовити послугу</button>
+
+        <button class="modal-btn" data-modal-open>Замовити послугу</button>
       </div>
     </section>
     <section class="features section">
@@ -117,13 +118,28 @@
         <h2 class="title">Чим ми займаємося</h2>
         <ul class="duties-list">
           <li class="duties-list-item list">
-            <img src="images/box-1.jpg" alt="розробка сайту" width="370" height="294" />
+            <div class="duties-img-thumb">
+              <img src="images/box-1.jpg" alt="десктопні додатки" width="370" height="294" />
+              <div class="duties-text">
+                <p>Десктопні додатки</p>
+              </div>
+            </div>
           </li>
           <li class="duties-list-item list">
-            <img src="images/box-2.jpg" alt="просування сайту" width="370" height="294" />
+            <div class="duties-img-thumb">
+              <img src="images/box-2.jpg" alt="мобільні додатки" width="370" height="294" />
+              <div class="duties-text">
+                <p>Мобільні додатки</p>
+              </div>
+            </div>
           </li>
           <li class="duties-list-item list">
-            <img src="images/box-3.jpg" alt="дизайн сайту" width="370" height="294" />
+            <div class="duties-img-thumb">
+              <img src="images/box-3.jpg" alt="дизайнерські рішення" width="370" height="294" />
+              <div class="duties-text">
+                <p>Дизайнерські рішення</p>
+              </div>
+            </div>
           </li>
         </ul>
       </div>
@@ -401,6 +417,21 @@
       </div>
     </div>
   </footer>
+
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+      <p>
+      </p>
+      <button data-modal-close type="button" class="modal-close-btn">
+        <svg class="modal-close-icon" width="18" height="18">
+          <use href="images/icons.svg#icon-close">
+          </use>
+        </svg>
+      </button>
+    </div>
+  </div>
+
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
