--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
   </footer>
 
   <div class="backdrop is-hidden" data-modal>
-    <div class="modal is-hidden">
+    <div class="modal">
       <p>
       </p>
       <button data-modal-close type="button" class="modal-close-btn">
